--- a/_config.yml
+++ b/_config.yml
@@ -53,7 +53,8 @@ kramdown:
 
 # 评论系统
 # Disqus settings（https://disqus.com/）
-disqus_username: lilly_yu
+# disqus_username: lilly_yu
+disqus_shortname: lilly_yu
 
 # 多说 将于2017年6月1日正式关停服务，建议使用 Disqus（http://dev.duoshuo.com/threads/58d1169ae293b89a20c57241）
 # Duoshuo settings
