--- a/_config.yml
+++ b/_config.yml
@@ -54,7 +54,7 @@ kramdown:
 # 评论系统
 # Disqus settings（https://disqus.com/）
 export JEKYLL_ENV=production
-disqus_username: lilly_yu
+disqus_shortname: ly16.github.io
 
 
 
