--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Clover Blog
 SEOTitle: CS Learner | Lilly Yu
-header-img: img/post-bg-desk.jpg
+header-img: img/post-bg-lins.jpg
 email: liliyu3@hotmail.com
 description: "From B, through S, to C."
 keyword: "Biotech, Machine Learning, Big Data"
