--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ sidebar-avatar: /img/DSC01316.JPG      # use absolute URL, seeing it's used in b
 RSS: false
 github_username:    ly16
 facebook_username:  100005132355723
-linkedin_username:  lili-yu-49773a113
+linkedin_username:  lili-yu
 
 
 
