--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Clover Blog
-SEOTitle: CS Learner | Lilly Yu
+SEOTitle: Clover Blog | Lilly Yu
 header-img: img/home-bg-lins.jpg
 email: liliyu3@hotmail.com
 description: "From B, through S, to C."
