--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@ title: Clover Blog
 SEOTitle: Clover Blog | Lilly Yu
 header-img: img/home-bg-lins.jpg
 email: liliyu3@hotmail.com
-description: "Love Piano, Love Computer science."
-keyword: "Computer science, Machine Learning, Big Data"
+description: "Love piano, Love roller coaster."
+keyword: "Artificial Intelligence, Machine Learning, Big Data"
 url: "http://ly16.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 github_repo: "https://github.com/ly16/ly16.github.io.git" # you code repository
